nextjs/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kspot-nextjs-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: your-domain.com 
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: kspot-nextjs-service
            port:
              number: 80
